--- a/.gitattributes
+++ b/.gitattributes
@@ -47,7 +47,7 @@
 *.tiff filter=lfs diff=lfs merge=lfs -text
 # Collapse Unity-generated files on GitHub
 *.asset filter=lfs diff=lfs merge=lfs linguist-generated
-*.mat linguist-generated
-*.meta linguist-generated
-*.prefab linguist-generated
-*.unity linguist-generated
+*.mat filter=lfs diff=lfs merge=lfs linguist-generated
+*.meta filter=lfs diff=lfs merge=lfs linguist-generated
+*.prefab filter=lfs diff=lfs merge=lfs linguist-generated
+*.unity filter=lfs diff=lfs merge=lfs linguist-generated
